--- a/Endmer/Views/Araclar/AracGuncelle.cshtml
+++ b/Endmer/Views/Araclar/AracGuncelle.cshtml
@@ -25,14 +25,19 @@
 
                                     @Html.HiddenFor(x => x.ID)
 
-                                    <div class="col-sm-12 col-md-6 col-lg-6">
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">Marka - Model</label>
                                         @Html.TextBoxFor(x => x.MARKA, new { @class = "form-control", @placeholder = "Marka.." })
                                     </div>
 
-                                    <div class="col-sm-12 col-md-6 col-lg-6">
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">Resim</label>
                                         <input type="file" class="form-control" name="RESIM" />
+                                    </div>
+
+                                    <div class="col-sm-12 col-md-4 col-lg-4">
+                                        <label class="form-label">Plaka</label>
+                                        @Html.TextBoxFor(x => x.PLAKA, new { @class = "form-control", @placeholder = "Plaka.." })
                                     </div>
 
                                 </div>
@@ -50,8 +55,8 @@
                                     </div>
 
                                     <div class="col-sm-12 col-md-4 col-lg-4">
-                                        <label class="form-label">Plaka</label>
-                                        @Html.TextBoxFor(x => x.PLAKA, new { @class = "form-control", @placeholder = "Plaka.." })
+                                        <label class="form-label">Bakım Zamanı</label>
+                                        <input type="date" class="form-control" name="BAKIMZAMANI" />
                                     </div>
 
                                 </div>
