--- a/Endmer/Views/AnaSayfa/Cards.cshtml
+++ b/Endmer/Views/AnaSayfa/Cards.cshtml
@@ -14,7 +14,7 @@
                             </div>
                         </div>
                         <div class="col-4 text-end">
-                            <div class="icon icon-shape bg-gradient-primary shadow-primary text-center rounded-circle">
+                            <div class="icon icon-shape bg-gradient-info shadow-primary text-center rounded-circle">
                                 <i class="ni ni-app text-lg opacity-10" aria-hidden="true"></i>
                             </div>
                         </div>
@@ -38,7 +38,7 @@
                             </div>
                         </div>
                         <div class="col-4 text-end">
-                            <div class="icon icon-shape bg-gradient-danger shadow-danger text-center rounded-circle">
+                            <div class="icon icon-shape bg-gradient-success shadow-danger text-center rounded-circle">
                                 <i class="fa fa-person text-lg opacity-10" aria-hidden="true"></i>
                             </div>
                         </div>
@@ -55,15 +55,15 @@
                     <div class="row">
                         <div class="col-8">
                             <div class="numbers">
-                                <p class="text-sm mb-0 text-uppercase font-weight-bold">Departman</p>
+                                <p class="text-sm mb-0 text-uppercase font-weight-bold">Zimmetler</p>
                                 <h5 class="font-weight-bolder">
-                                    @ViewBag.TotalDepartman
+                                    @ViewBag.TotalDebit
                                 </h5>
                             </div>
                         </div>
                         <div class="col-4 text-end">
-                            <div class="icon icon-shape bg-gradient-success shadow-success text-center rounded-circle">
-                                <i class="ni ni-building text-lg opacity-10" aria-hidden="true"></i>
+                            <div class="icon icon-shape bg-gradient-danger shadow-success text-center rounded-circle">
+                                <i class="ni ni-folder-17 text-lg opacity-10" aria-hidden="true"></i>
                             </div>
                         </div>
                     </div>
