--- a/Endmer/Views/Araclar/Index.cshtml
+++ b/Endmer/Views/Araclar/Index.cshtml
@@ -39,12 +39,14 @@
                             <thead align="center">
                                 <tr>
                                     <th>Resim</th>
-                                    <th data-field="marka" data-filter-control="select">Marka - Model</th>
-                                    <th data-field="plaka">Plaka</th>
-                                    <th data-field="kullanıcı" data-filter-control="select">Kullanıcı</th>
-                                    <th data-field="km">KM</th>
-                                    <th data-field="lokasyon" data-filter-control="select">Lokasyon</th>
-                                    <th colspan="3">İşlemler</th>
+                                    <th>Marka - Model</th>
+                                    <th>Plaka</th>
+                                    <th>Kullanıcı</th>
+                                    <th>KM</th>
+                                    <th>Lokasyon</th>
+                                    <th>Geçmiş Bakım</th>
+                                    <th>Gelecek Bakım</th>
+                                    <th colspan="4">İşlemler</th>
                                 </tr>
                             </thead>
                             @foreach (var x in Model)
@@ -57,9 +59,12 @@
                                         <td>@x.Tbl_Personel.AD @x.Tbl_Personel.SOYAD</td>
                                         <td>@x.KM</td>
                                         <td>@x.Tbl_Konumlar.KONUM</td>
+                                        <td>@ViewBag.PastCare</td>
+                                        <td>@ViewBag.FutureCare</td>
                                         <td><a href="/Araclar/AracDetay/@x.ID" class="btn btn-primary">Detay</a></td>
-                                        <td>@Html.ActionLink("Sil", "AracSil", new { id = x.ID }, new { @class = "btn btn-danger", onclick = "return confirm('Aracı Silmek İstediğinize Emin Misiniz?')" })</td>
+                                        <td>@Html.ActionLink("Sil", "AracSil", new { id = x.ID }, new { @class = "btn btn-danger", onclick = "return confirm('Silmek İstediğinize Emin Misiniz?')" })</td>
                                         <td><a href="/Araclar/AracGuncelle/@x.ID" class="btn btn-success">Güncelle</a></td>
+                                        <td><a href="/Araclar/BakimZamani/@x.ID" class="btn btn-warning">Bakım Zamanı</a></td>
                                     </tr>
                                 </tbody>
                             }
