--- a/Endmer/Views/Login/Index.cshtml
+++ b/Endmer/Views/Login/Index.cshtml
@@ -53,11 +53,8 @@
                             </div>
                         </div>
                         <div class="col-6 d-lg-flex d-none h-100 my-auto pe-0 position-absolute top-0 end-0 text-center justify-content-center flex-column">
-                            <div class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center overflow-hidden" style="background-image: url('https://raw.githubusercontent.com/creativetimofficial/public-assets/master/argon-dashboard-pro/assets/img/signin-ill.jpg');
-          background-size: cover;">
+                            <div class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center overflow-hidden" style="background: url('/template/logo.png') no-repeat center">
                                 <span class="mask bg-gradient-primary opacity-6"></span>
-                                <h3 class="mt-5 text-white font-weight-bolder position-relative">Endmer</h3>
-                                <p class="text-white position-relative">Endüstri Merkezi</p>
                             </div>
                         </div>
                     </div>
