--- a/Endmer/Views/Personel/PersonelGuncelle.cshtml
+++ b/Endmer/Views/Personel/PersonelGuncelle.cshtml
@@ -51,9 +51,12 @@
 
                                 <div class="row mb-3">
 
-                                    <div class="col-sm-12 col-md-4 col-lg-4">
+                                    <div class="col-sm-12 col-md-4 col-lg-4 ">
                                         <label class="form-label">Kullanıcı Adı</label>
-                                        @Html.TextBoxFor(x => x.KULLANICIADI, new { @class = "form-control", @placeholder = "Kullanıcı adı..", @required = "required" })
+                                        <div class="input-group">
+                                            <span class="input-group-text">&commat;</span>
+                                            <input type="text" name="KULLANICIADI" class="form-control" placeholder="Kullanıcı adı..">
+                                        </div>
                                     </div>
 
                                     <div class="col-sm-12 col-md-4 col-lg-4">
