--- a/Endmer/Views/Profil/ProfilGuncelle.cshtml
+++ b/Endmer/Views/Profil/ProfilGuncelle.cshtml
@@ -39,7 +39,10 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-6">
                                         <label class="form-label">Kullanıcı Adı</label>
-                                        @Html.TextBoxFor(x => x.KULLANICIADI, new { @class = "form-control", @placeholder = "Kullanıcı adı..", @required = "required" })
+                                        <div class="input-group">
+                                            <span class="input-group-text">&commat;</span>
+                                            <input type="text" name="KULLANICIADI" class="form-control" placeholder="Kullanıcı adı..">
+                                        </div>
                                     </div>
 
                                     <div class="col-sm-12 col-md-6 col-lg-6">
