--- a/Endmer/Views/Urunler/ZimmetSahipleri.cshtml
+++ b/Endmer/Views/Urunler/ZimmetSahipleri.cshtml
@@ -15,6 +15,7 @@
                                 <tr>
                                     <th>Personel</th>
                                     <th>Adet</th>
+                                    <th>Arızalı</th>
                                     <th>Tarih</th>
                                 </tr>
                             </thead>
@@ -24,6 +25,7 @@
                                     <tr>
                                         <td>@x.Tbl_Personel.AD @x.Tbl_Personel.SOYAD</td>
                                         <td>@x.ADET</td>
+                                        <td>@x.ARIZALIADET</td>
                                         <td>@(((DateTime)x.TARIH).ToString("dd MMMM yyyy"))</td>
                                     </tr>
                                 </tbody>
