Araçlar Index sayfasına Geçmiş Bakım ve Gelecek Bakım alanları eklendi.

--- a/Endmer/Views/Araclar/BakimEkle.cshtml
+++ b/Endmer/Views/Araclar/BakimEkle.cshtml
@@ -46,6 +46,6 @@
 
 
 <script>
-    var kategoriler = document.getElementById('kategoriler');
-    kategoriler.classList.add('active');
+    var aracalar = document.getElementById('araclar');
+    araclar.classList.add('active');
 </script>
