--- a/Endmer/Views/Araclar/BakimZamani.cshtml
+++ b/Endmer/Views/Araclar/BakimZamani.cshtml
@@ -28,6 +28,7 @@
                             <thead align="center">
                                 <tr>
                                     <th>Tarih</th>
+                                    <th>Durum</th>
                                     <th colspan="2">İşlemler</th>
                                 </tr>
                             </thead>
@@ -36,6 +37,7 @@
                                 <tbody align="center">
                                     <tr>
                                         <td>@(((DateTime)x.TARIH).ToString("dd MMMM yyyy"))</td>
+                                        <td>@x.BAKIMDURUM</td>
                                         <td><a href="/Araclar/Yapildi/@x.ID" class="btn btn-success">Yapıldı</a></td>
                                         <td>@Html.ActionLink("Sil", "BakimSil", new { id = x.ID }, new { @class = "btn btn-danger", onclick = "return confirm('Silmek İstediğinize Emin Misiniz?')" })</td>
                                     </tr>
