--- a/Endmer/Views/Shared/_Layout.cshtml
+++ b/Endmer/Views/Shared/_Layout.cshtml
@@ -306,19 +306,19 @@
     </script>
     <script>
 
-        var tables = document.querySelectorAll('tbody');
-        for (var i = 0; i < tables.length; i++) {
-            tables[i].classList.add('myTable');
-        }
+        //var tables = document.querySelectorAll('tbody');
+        //for (var i = 0; i < tables.length; i++) {
+        //    tables[i].classList.add('myTable');
+        //}
 
-        $(document).ready(function () {
-            $("#myInput").on("keyup", function () {
-                var value = $(this).val().toLowerCase();
-                $(".myTable tr").filter(function () {
-                    $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
-                });
-            });
-        });
+        //$(document).ready(function () {
+        //    $("#myInput").on("keyup", function () {
+        //        var value = $(this).val().toLowerCase();
+        //        $(".myTable tr").filter(function () {
+        //            $(this).toggle($(this).text().toLowerCase().indexOf(value) > -1)
+        //        });
+        //    });
+        //});
 
     </script>
     <!-- Github buttons -->
