--- a/Endmer/Views/Urunler/Index.cshtml
+++ b/Endmer/Views/Urunler/Index.cshtml
@@ -23,6 +23,7 @@
                     <div class="col">
                         <div class="float-start ms-3">
                             <a href="/Urunler/UrunEkle" class="btn btn-info">Yeni Ürün Ekle</a>
+                            <a href="/Urunler/Yazdir" class="btn btn-secondary"><i class="fa-solid fa-print"></i></a>
                         </div>
 
                         <div class="float-end me-3">
