--- a/Endmer/Views/Zimmetler/Index.cshtml
+++ b/Endmer/Views/Zimmetler/Index.cshtml
@@ -21,6 +21,7 @@
                     <div class="col">
                         <div class="float-start ms-3">
                             <a href="/Zimmetler/ZimmetVer" class="btn btn-info">Zimmet Ver</a>
+                            <a href="/Zimmetler/Yazdir" class="btn btn-secondary"><i class="fa-solid fa-print"></i></a>
                         </div>
 
                         <div class="float-end me-3">
