--- a/Endmer/Views/Araclar/Kayitlar.cshtml
+++ b/Endmer/Views/Araclar/Kayitlar.cshtml
@@ -33,7 +33,7 @@
                                         <td>@x.Tbl_Personel1.AD @x.Tbl_Personel1.SOYAD</td>
                                         <td>@x.KM</td>
                                         <td>@x.Tbl_Konumlar.KONUM</td>
-                                        <td>@(((DateTime)x.TARIH).ToString("dd MMMM yyyy"))</td>
+                                        <td>@(((DateTime)x.TARIH).ToString("dd'/'MM'/'yyyy"))</td>
                                     </tr>
                                 </tbody>
                             }
