--- a/Endmer/Views/Urunler/Yazdir.cshtml
+++ b/Endmer/Views/Urunler/Yazdir.cshtml
@@ -53,7 +53,7 @@
                                     <div class="receipt-header receipt-header-mid">
                                         <div class="text-right" style="padding-right: 15px">
                                             <div class="receipt-right">
-                                                <p><b>Tarih:</b> @DateTime.Now.ToShortDateString()</p>
+                                                <p><b>Tarih:</b> @DateTime.Now.ToString("dd'/'MM'/'yyyy")</p>
                                             </div>
                                         </div>
                                     </div>
