--- a/Endmer/Views/Araclar/GecmisYazdir.cshtml
+++ b/Endmer/Views/Araclar/GecmisYazdir.cshtml
@@ -53,7 +53,7 @@
                                     <div class="receipt-header receipt-header-mid">
                                         <div class="text-right" style="padding-right: 15px">
                                             <div class="receipt-right">
-                                                <p><b>Tarih:</b> @DateTime.Now.ToShortDateString()</p>
+                                                <p><b>Tarih:</b> @DateTime.Now.ToString("dd'/'MM'/'yyyy")</p>
                                             </div>
                                         </div>
                                     </div>
@@ -90,7 +90,7 @@
                                         <td class="col-2">@x.Tbl_Personel1.AD @x.Tbl_Personel1.SOYAD</td>
                                         <td class="col-2">@x.KM</td>
                                         <td class="col-1">@x.Tbl_Konumlar.KONUM</td>
-                                        <td class="col-1">@(((DateTime)x.TARIH).ToString("dd MMMM yyyy"))</td>
+                                        <td class="col-1">@(((DateTime)x.TARIH).ToString("dd'/'MM'/'yyyy"))</td>
                                     </tr>
                                 }
                             </tbody>
