--- a/Endmer/Views/Onaylar/Index.cshtml
+++ b/Endmer/Views/Onaylar/Index.cshtml
@@ -58,7 +58,7 @@
                                         <td>@x.Tbl_Urunler.BARKODNO</td>
                                         <td>@x.ADET</td>
                                         <td>@x.Tbl_Konumlar.KONUM</td>
-                                        <td>@(((DateTime)x.TARIH).ToString("dd/MM/yyyy"))</td>
+                                        <td>@(((DateTime)x.TARIH).ToString("dd'/'MM'/'yyyy"))</td>
                                         <td>@Html.ActionLink("Onayla", "Onayla", new { id = x.ID }, new { @class = "btn btn-success", onclick = "return confirm('Onaylamak İstediğinize Emin Misiniz?')" })</td>
                                         <td>@Html.ActionLink("Reddet", "Reddet", new { id = x.ID }, new { @class = "btn btn-danger", onclick = "return confirm('Reddetmek İstediğinize Emin Misiniz?')" })</td>
                                     </tr>
