--- a/Endmer/Views/Shared/_Layout.cshtml
+++ b/Endmer/Views/Shared/_Layout.cshtml
@@ -139,6 +139,15 @@
                             <span class="nav-link-text ms-1">Zimmetlerim</span>
                         </a>
                     </li>
+
+                    <li class="nav-item">
+                        <a id="araclarim" class="nav-link " href="/Araclarim/Index">
+                            <div class="icon icon-shape icon-sm border-radius-md text-center me-2 d-flex align-items-center justify-content-center">
+                                <i class="ni ni-bus-front-12 text-warning text-sm opacity-10"></i>
+                            </div>
+                            <span class="nav-link-text ms-1">Araçlarım</span>
+                        </a>
+                    </li>
                 }
 
 
