Dosya seçimlerinde sadece resim dosyaları gözükmesi özelliği eklendi.

--- a/Endmer/Views/Araclar/AracGuncelle.cshtml
+++ b/Endmer/Views/Araclar/AracGuncelle.cshtml
@@ -31,7 +31,7 @@
 
                                     <div class="col-sm-12 col-md-6 col-lg-6">
                                         <label class="form-label">Resim</label>
-                                        <input type="file" class="form-control" name="RESIM" />
+                                        <input type="file" class="form-control" name="RESIM" accept="image/*" />
                                     </div>
 
                                 </div>
