--- a/Endmer/Views/Urunler/UrunGuncelle.cshtml
+++ b/Endmer/Views/Urunler/UrunGuncelle.cshtml
@@ -35,7 +35,7 @@
 
                                     <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">Resim</label>
-                                        <input type="file" class="form-control" name="RESIM" />
+                                        <input type="file" class="form-control" name="RESIM" accept="image/*" />
                                     </div>
 
                                 </div>
