--- a/Endmer/Views/Araclar/AracEkle.cshtml
+++ b/Endmer/Views/Araclar/AracEkle.cshtml
@@ -27,7 +27,7 @@
 
                                     <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">Resim</label>
-                                        <input type="file" class="form-control" name="RESIM" />
+                                        <input type="file" class="form-control" name="RESIM" accept="image/*" />
                                     </div>
 
                                     <div class="col-sm-12 col-md-4 col-lg-4">
