--- a/Endmer/Views/AnaSayfa/Index.cshtml
+++ b/Endmer/Views/AnaSayfa/Index.cshtml
@@ -55,13 +55,32 @@
         @Html.Action("PersonalByDepartman", "AnaSayfa")
         @Html.Action("ProductByCategory", "AnaSayfa")
     </div>
-    
+
 </div>
 
 
+<div class="modal @ViewBag.Status" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title">Modal title</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                <p>Modal body text goes here.</p>
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <script>
     var anasayfa = document.getElementById('anasayfa');
     anasayfa.classList.add('active');
+
+    //$(function () { $('#myModal').modal('show') });
 </script>
