--- a/Endmer/Views/Araclar/AracEkle.cshtml
+++ b/Endmer/Views/Araclar/AracEkle.cshtml
@@ -23,6 +23,7 @@
                                     <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">Marka - Model</label>
                                         <input type="text" class="form-control" name="MARKA" placeholder="Marka - Model.." />
+                                        @Html.ValidationMessageFor(x=>x.MARKA, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
 
                                     <div class="col-sm-12 col-md-4 col-lg-4">
@@ -40,11 +41,13 @@
                                     <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">Plaka</label>
                                         <input type="text" class="form-control" name="PLAKA" placeholder="Plaka.." />
+                                        @Html.ValidationMessageFor(x => x.PLAKA, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
 
                                     <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">KM</label>
                                         <input type="text" class="form-control" name="KM" placeholder="KM.." />
+                                        @Html.ValidationMessageFor(x => x.KM, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
 
                                     <div class="col-sm-12 col-md-4 col-lg-4">
