--- a/Endmer/Views/Araclar/AracGuncelle.cshtml
+++ b/Endmer/Views/Araclar/AracGuncelle.cshtml
@@ -27,6 +27,7 @@
                                     <div class="col-sm-12 col-md-6 col-lg-6">
                                         <label class="form-label">Marka - Model</label>
                                         @Html.TextBoxFor(x => x.MARKA, new { @class = "form-control", @placeholder = "Marka.." })
+                                        @Html.ValidationMessageFor(x => x.MARKA, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
 
                                     <div class="col-sm-12 col-md-6 col-lg-6">
@@ -41,6 +42,7 @@
                                     <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">KM</label>
                                         @Html.TextBoxFor(x => x.KM, new { @class = "form-control", @placeholder = "KM.." })
+                                        @Html.ValidationMessageFor(x => x.KM, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
 
                                     <div class="col-sm-12 col-md-4 col-lg-4">
@@ -51,6 +53,7 @@
                                     <div class="col-sm-12 col-md-4 col-lg-4">
                                         <label class="form-label">Plaka</label>
                                         @Html.TextBoxFor(x => x.PLAKA, new { @class = "form-control", @placeholder = "Plaka.." })
+                                        @Html.ValidationMessageFor(x => x.PLAKA, "", new { @style = "color: red; font-size: 15px; text-align: center; display: block;" })
                                     </div>
 
                                 </div>
